--- a/assignment1/Server/package.json
+++ b/assignment1/Server/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "fs-extra": "^8.1.0",
     "path": "^0.12.7"
