Hopefully calculating clusters correctly

--- a/assignment2/Client/ClusterOfBlogs/ClusterOfBlogs/ClusterOfBlogs.csproj
+++ b/assignment2/Client/ClusterOfBlogs/ClusterOfBlogs/ClusterOfBlogs.csproj
@@ -56,7 +56,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Centroid.cs" />
+    <Compile Include="Logic.cs" />
     <Compile Include="WordCount.cs" />
+    <Compile Include="WordFrequency.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
